:construction: Add material-ui style sheet & font icons

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta charset="utf-8"/>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
     <title><%= ##PROJECTNAME## %></title>
 </head>
 <body>
